--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-13.12MB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.72MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-6.78MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-8.52MB/s(Youtube:不良林), server: 36.134.156.5, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.37MB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-5.89MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65002, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-11.44MB/s(Youtube:不良林), server: 36.134.156.5, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-387.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
